--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta charset="utf-8">
         <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指しています。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="twitter:card" content="xカードの種類">
+        <meta name="twitter:site" content="@twmjat1">
+        <meta property="og:url" content="https://x.com/home">
+        <meta property="og:title" content="socialtech">
+        <meta property="og:description" content="scoialtec-test-site">
+        <meta property="og:image" content="http://k-yamada01505.com/index-mantoman.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
