--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指しています。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@twmjat1">
         <meta property="og:url" content="https://x.com/home">
         <meta property="og:title" content="socialtech">
