--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@twmjat1">
-        <meta property="og:url" content="https://x.com/home">
+        <meta property="og:url" content="http://k-yamada01505.com/">
         <meta property="og:title" content="socialtech">
         <meta property="og:description" content="scoialtec-test-site">
         <meta property="og:image" content="http://k-yamada01505.com/images/index-mantoman.png">
