--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:url" content="http://k-yamada01505.com/">
         <meta property="og:title" content="socialtech">
         <meta property="og:description" content="scoialtec-test-site">
-        <meta property="og:image" content="http://k-yamada01505.com/images/index-mantoman.png">
+        <meta property="og:image" content="https://k-yamada01505.com/images/logo-sp.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
